# similarity_rate_based_switching

./: README.md  ScanSimilarityRateEstimator_v04.slx  SwitchingDecisionMechanism_v02.slx
Energy Map Generate Offline/maps/: map.pgm  map.yaml
MATLAB/Energy Map Generate Offline/: EnergyMapGeneratorAndSaver.m
amcl_kidnapping/: CMakeLists.txt  package.xml
amcl_kidnapping/cfg/: AMCL_kidnapping.cfg
amcl_kidnapping/include/amcl_kidnapping/sensors/: amcl_kidnapping_laser.h  amcl_kidnapping_odom.h  amcl_kidnapping_sensor.h
amcl_kidnapping/launch/: amcl_kidnapping.launch
amcl_kidnapping/maps/: energymap.yaml
amcl_kidnapping/scripts/: SER.py  zone_list.yaml
amcl_kidnapping/src/: amcl_kidnapping_node.cpp
amcl_kidnapping/src/amcl_kidnapping/map/: map.c  map_cspace.cpp  map_draw.c  map_range.c  map_store.c
amcl_kidnapping/src/amcl_kidnapping/pf/: pf.c  pf_kdtree.c  pf_pdf.c  pf_vector.c
amcl_kidnapping/src/amcl_kidnapping/sensors/: amcl_kidnapping_laser.cpp  amcl_kidnapping_odom.cpp  amcl_kidnapping_sensor.cpp
precise_localization/: ScanMatcher_v21.slx
